--- a/codigo/Guilherme_Bittencourt/index.html
+++ b/codigo/Guilherme_Bittencourt/index.html
@@ -119,117 +119,97 @@
 
     <script>
         const API_KEY = '5c44b3606f0c4083a694018d9e277792'; // Sua chave de API do Geoapify
-        let map;
-        let userLocation;
-        let markers = [];
+let map;
+let userLocation;
+let markers = [];
 
-        // Função para inicializar o mapa usando a API do Geoapify
-        function initMap() {
-            map = new window.L.Map("map", {
-                center: [ -19.8191, -43.9378 ], // Belo Horizonte
-                zoom: 12,
-                zoomControl: true,
-            });
-
-            // Usando a URL fornecida para o estilo carto
-            window.L.tileLayer(
-                `https://maps.geoapify.com/v1/tile/carto/{z}/{x}/{y}.png?&apiKey=${API_KEY}`,
-                {
-                    maxZoom: 19,
-                    attribution: "© OpenStreetMap contributors"
-                }
-            ).addTo(map);
-
-            // Definindo as ONGs com suas localizações (latitude e longitude)
-            const ongs = [
-               { name: "Comida que Abraça", lat: -19.9191, lng: -43.9378, tipo: "alimentos" },
-    { name: "ONG Verde", lat: -19.8300, lng: -43.9200, tipo: "voluntariado" },
-    { name: "Fundação Dom Bosco", lat: -19.8320, lng: -43.9320, tipo: "dinheiro" },
-    { name: "ONG Cidadania e Paz", lat: -19.885395, lng: -43.899870, tipo: "alimentos" },
-    { name: "Casa de Apoio Aura", lat: -19.923439, lng: -43.910139, tipo: "voluntariado" },
-    { name: "ONG Casa Azul", lat: -19.941398, lng: -43.992617, tipo: "dinheiro" },
-    { name: "Casa de apoio Amor a Vida", lat: -19.838569, lng: -43.957492, tipo: "alimentos" },
-    { name: "NAAÇÃO", lat: -19.905187604940696, lng: -43.95808075119398, tipo: "voluntariado" },
-    { name: "Ong Raio de Luz", lat: -19.85191471286857, lng: -43.93370483658515, tipo: "alimentos" },
-    { name: "ONG Oportunidade", lat: -19.816004000304673, lng: -43.97452979639733, tipo: "dinheiro" },
-    { name: "ONG O Bem Nunca Para", lat: -19.823755649892053, lng: -43.91582160769156, tipo: "voluntariado" },
-    { name: "SOMOS DO BHEM", lat: -19.843778994607835, lng: -43.92955451733034, tipo: "alimentos" },
-    { name: "ONG PAREDÃO OUSADIA SOLIDÁRIO", lat: -19.984300007093854, lng: -44.055233419138354, tipo: "alimentos" },
-    { name: "ONG Movimentar Vidas", lat: -19.797914357134342, lng: -43.99232515995152, tipo: "voluntariado" },
-    { name: "Projeto Esperança", lat: -19.79500706055147, lng: -43.97035250452948, tipo: "dinheiro" },
-    { name: "Ong Ágape Provisão", lat: -19.77982364920765, lng: -43.983398768686314, tipo: "alimentos" },
-    { name: "ONG Pro Vida", lat: -19.9148732360653, lng: -43.938261982692524, tipo: "dinheiro" },
-    { name: "Ação Social Casa De Nazaré", lat: -19.812268065449416, lng: -43.95474309172861, tipo: "voluntariado" },
-    { name: "ONG Calpevi - Casa de Apoio Lutando Pela Vida", lat: -19.82970915530214, lng: -43.94718999142729, tipo: "alimentos" }
-            ];
-
-
-            // Definindo os ícones personalizados diretamente no script
-const iconDinheiro = new L.Icon({
-    iconUrl: 'imgs/iconedinheiro.png',
-    iconSize: [32, 40],
-    iconAnchor: [16, 40],
-    popupAnchor: [0, -40]
-});
-
-const iconAlimento = new L.Icon({
-    iconUrl: 'imgs/iconecomida.png',
-    iconSize: [32, 40],
-    iconAnchor: [16, 40],
-    popupAnchor: [0, -40]
-});
-
-const iconVoluntario = new L.Icon({
-    iconUrl: 'imgs/iconevoluntarios.png',
-    iconSize: [32, 40],
-    iconAnchor: [16, 40],
-    popupAnchor: [0, -40]
-});
-
-// Adicionando os marcadores para as ONGs com ícones personalizados
-ongs.forEach((ong) => {
-    let icon;
-    switch (ong.tipo) {
-        case 'dinheiro':
-            icon = iconDinheiro;
-            break;
-        case 'alimentos':
-            icon = iconAlimento;
-            break;
-        case 'voluntariado':
-            icon = iconVoluntario;
-            break;
-        default:
-            icon = L.icon.default; // Ícone padrão se não houver correspondência
+// Função para carregar o arquivo JSON
+async function loadOngs() {
+    try {
+        const response = await fetch('adição_ONGs.json'); // Caminho para o arquivo JSON
+        const ongs = await response.json(); // Converte o JSON em um array JavaScript
+        initMap(ongs); // Passa as ONGs para inicializar o mapa
+    } catch (error) {
+        console.error("Erro ao carregar ONGs:", error);
     }
+}
 
-    const marker = window.L.marker([ong.lat, ong.lng], { icon })
-        .addTo(map)
-        .bindPopup(ong.name);
+// Função para inicializar o mapa usando a API do Geoapify
+function initMap(ongs) {
+    map = new window.L.Map("map", {
+        center: [-19.9191, -43.9378], // Centro de Belo Horizonte
+        zoom: 12,
+        zoomControl: true,
+    });
 
-    markers.push({ ...ong, marker });
-});
-
-            // Obtendo a localização do usuário
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition((position) => {
-                    userLocation = [position.coords.latitude, position.coords.longitude];
-
-                    // Adicionando um marcador para a posição do usuário
-                    window.L.marker(userLocation)
-                        .addTo(map)
-                        .bindPopup("Sua localização");
-
-                    // Atualizar os filtros quando o mapa estiver pronto
-                    updateFilters();
-                });
-            }
+    // Usando a URL fornecida para o estilo carto
+    window.L.tileLayer(
+        `https://maps.geoapify.com/v1/tile/carto/ {z}/{x}/{y}.png?&apiKey=${API_KEY}`,
+        {
+            maxZoom: 19,
+            attribution: "© OpenStreetMap contributors"
         }
+    ).addTo(map);
 
-        function updateFilters() {
+    // Definindo os ícones personalizados
+    const iconDinheiro = new L.Icon({
+        iconUrl: 'imgs/iconedinheiro.png',
+        iconSize: [32, 40],
+        iconAnchor: [16, 40],
+        popupAnchor: [0, -40]
+    });
+    const iconAlimento = new L.Icon({
+        iconUrl: 'imgs/iconecomida.png',
+        iconSize: [32, 40],
+        iconAnchor: [16, 40],
+        popupAnchor: [0, -40]
+    });
+    const iconVoluntario = new L.Icon({
+        iconUrl: 'imgs/iconevoluntarios.png',
+        iconSize: [32, 40],
+        iconAnchor: [16, 40],
+        popupAnchor: [0, -40]
+    });
+
+    // Adicionando os marcadores para as ONGs com ícones personalizados
+    ongs.forEach((ong) => {
+        let icon;
+        switch (ong.tipo) {
+            case 'dinheiro':
+                icon = iconDinheiro;
+                break;
+            case 'alimentos':
+                icon = iconAlimento;
+                break;
+            case 'voluntariado':
+                icon = iconVoluntario;
+                break;
+            default:
+                icon = L.icon.default; // Ícone padrão se não houver correspondência
+        }
+        const marker = window.L.marker([ong.lat, ong.lng], { icon })
+            .addTo(map)
+            .bindPopup(ong.name);
+        markers.push({ ...ong, marker });
+    });
+
+    // Obtendo a localização do usuário
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition((position) => {
+            userLocation = [position.coords.latitude, position.coords.longitude];
+            // Adicionando um marcador para a posição do usuário
+            window.L.marker(userLocation)
+                .addTo(map)
+                .bindPopup("Sua localização");
+            // Atualizar os filtros quando o mapa estiver pronto
+            updateFilters();
+        });
+    }
+}
+
+function updateFilters() {
     const typeFilter = document.getElementById("filterType").value;
     const radius = parseFloat(document.getElementById("filterRadius").value); // Em km
-
     // Mostra o valor em tempo real
     document.getElementById("radiusValue").textContent = radius;
 
@@ -246,10 +226,8 @@ ongs.forEach((ong) => {
             ...ong,
             distance: getDistance(userLocation, [ong.lat, ong.lng])
         }));
-
         // Filtrar pelo raio selecionado
         filteredOngs = filteredOngs.filter(ong => ong.distance <= radius);
-
         // 🔁 Ordenar sempre por distância (sem precisar de checkbox)
         filteredOngs.sort((a, b) => a.distance - b.distance);
     }
@@ -270,28 +248,29 @@ ongs.forEach((ong) => {
         map.addLayer(userMarker);
     }
 }
-        
-        // Função para calcular a distância entre duas coordenadas
-        function getDistance(coord1, coord2) {
-            const lat1 = coord1[0];
-            const lon1 = coord1[1];
-            const lat2 = coord2[0];
-            const lon2 = coord2[1];
-            
-            const R = 6371; // Raio da Terra em km
-            const dLat = (lat2 - lat1) * Math.PI / 180;
-            const dLon = (lon2 - lon1) * Math.PI / 180;
-            const a = Math.sin(dLat/2) * Math.sin(dLat/2) +
-                      Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
-                      Math.sin(dLon/2) * Math.sin(dLon/2);
-            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-            const distance = R * c; // Resultado em km
-            return distance;
-        }
 
-        // Inicializar o mapa ao carregar a página
-        window.onload = initMap;
-        // Atualiza os filtros automaticamente enquanto o usuário arrasta o slider
+// Função para calcular a distância entre duas coordenadas
+function getDistance(coord1, coord2) {
+    const lat1 = coord1[0];
+    const lon1 = coord1[1];
+    const lat2 = coord2[0];
+    const lon2 = coord2[1];
+
+    const R = 6371; // Raio da Terra em km
+    const dLat = (lat2 - lat1) * Math.PI / 180;
+    const dLon = (lon2 - lon1) * Math.PI / 180;
+    const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+              Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
+              Math.sin(dLon / 2) * Math.sin(dLon / 2);
+    const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+    const distance = R * c; // Resultado em km
+    return distance;
+}
+
+// Carregar as ONGs e inicializar o mapa ao carregar a página
+window.onload = loadOngs;
+
+// Atualiza os filtros automaticamente enquanto o usuário arrasta o slider
 document.getElementById("filterRadius").addEventListener("input", function () {
     document.getElementById("radiusValue").textContent = this.value;
     updateFilters(); // Atualiza os marcadores em tempo real
