--- a/codigo/public/modulos/user/cadastro_usuario.html
+++ b/codigo/public/modulos/user/cadastro_usuario.html
@@ -18,6 +18,7 @@
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
             <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="../../about.html" class="nav-link link-white">Sobre Nós</a>
         </nav>
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
