--- a/codigo/public/modulos/volunteers/gestaodevoluntarios.html
+++ b/codigo/public/modulos/volunteers/gestaodevoluntarios.html
@@ -22,6 +22,7 @@
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
             <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="../../about.html" class="nav-link link-white">Sobre Nós</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
