--- a/codigo/public/modulos/ong/dashboard_ong.html
+++ b/codigo/public/modulos/ong/dashboard_ong.html
@@ -119,6 +119,7 @@
     </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../../assets/js/config.js"></script>
 <script src="../../assets/js/ong/dashboard_ong.js"></script>
 <script src="../../assets/js/auth/login.js"></script>
 </body>
