--- a/codigo/public/modulos/ong/ongs.html
+++ b/codigo/public/modulos/ong/ongs.html
@@ -78,6 +78,7 @@
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="../../assets/js/config.js"></script>
 <script src="../../assets/js/ong/ongs.js"></script>
 <script src="../../assets/js/auth/login.js"></script>
 </html>
