--- a/codigo/public/modulos/user/cadastro_usuario.html
+++ b/codigo/public/modulos/user/cadastro_usuario.html
@@ -161,6 +161,7 @@
     </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../../assets/js/config.js"></script>
   <script src="../../assets/js/user/cadastro_usuario.js"></script>
   <script src="../../assets/js/auth/login.js"></script>
 </body>
