--- a/codigo/public/modulos/user/perfil_usuario.html
+++ b/codigo/public/modulos/user/perfil_usuario.html
@@ -114,6 +114,7 @@
         </div>
     </footer>
 
+  <script src="../../assets/js/config.js"></script>
   <script src="../../assets/js/user/perfil_usuario.js"></script>
   <script src="../../assets/js/auth/login.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
