--- a/codigo/public/modulos/volunteers/cadastro_voluntarios.html
+++ b/codigo/public/modulos/volunteers/cadastro_voluntarios.html
@@ -98,7 +98,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="../../assets/js/auth/login.js"></script>
+    <script src="../../assets/js/config.js"></script>
+    <script src="../../assets/js/auth/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="../../assets/js/volunteers/cadastro_voluntarios.js"></script>
 </body>
