--- a/codigo/public/modulos/volunteers/gestaodevoluntarios.html
+++ b/codigo/public/modulos/volunteers/gestaodevoluntarios.html
@@ -78,6 +78,7 @@
         </div>
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../../assets/js/config.js"></script>
   <script src="../../assets/js/volunteers/gestaodevoluntarios.js"></script>
   <script src="../../assets/js/auth/login.js"></script>
   </body>
