--- a/codigo/public/modulos/volunteers/voluntariado_ongs.html
+++ b/codigo/public/modulos/volunteers/voluntariado_ongs.html
@@ -81,6 +81,7 @@
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="../../assets/js/config.js"></script>
 <script src="../../assets/js/auth/login.js"></script>
 <script src="../../assets/js/volunteers/voluntariado_ongs.js"></script>
 </html>
