--- a/codigo/public/ranking.html
+++ b/codigo/public/ranking.html
@@ -77,6 +77,7 @@
     </div>
   </footer>
 
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/ranking.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="assets/js/auth/login.js"></script>
