--- a/codigo/public/modulos/donations/agendamento.html
+++ b/codigo/public/modulos/donations/agendamento.html
@@ -89,6 +89,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="../../assets/js/config.js"></script>
         <script src="../../assets/js/donations/agendamento.js"></script>
         <script src="../../assets/js/auth/login.js"></script>
 </body>
