--- a/codigo/public/modulos/donations/gerenciar_recorrencias.html
+++ b/codigo/public/modulos/donations/gerenciar_recorrencias.html
@@ -202,7 +202,8 @@
             </div>
         </div>
     </footer>
-  <script src="../../assets/js/donations/gerenciar_recorrencias.js"></script>
+  <script src="../../assets/js/config.js"></script>
+  <script src="../../assets/js/donations/gerenciar_recorrencia.js"></script>
   <script src="../../assets/js/auth/login.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
