--- a/codigo/public/modulos/ong/editar_perfil_ong.html
+++ b/codigo/public/modulos/ong/editar_perfil_ong.html
@@ -99,6 +99,7 @@
         </div>
     </footer>
 
+    <script src="../../assets/js/config.js"></script>
     <script src="../../assets/js/ong/editar_perfil_ong.js"></script>
     <script src="../../assets/js/auth/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
