--- a/codigo/public/explicacao.html
+++ b/codigo/public/explicacao.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/config.js"></script>
     <script src="assets/js/auth/login.js"></script>
   </head>
   <body>
