--- a/codigo/public/login.html
+++ b/codigo/public/login.html
@@ -83,6 +83,7 @@
         </div>
     </footer>
 
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/login.js"></script>
   <script>
 
