--- a/codigo/public/modulos/donations/cadastro_doacao.html
+++ b/codigo/public/modulos/donations/cadastro_doacao.html
@@ -105,7 +105,8 @@
             </div>
         </div>
     </footer>
-    <script src="../../assets/js/donations/cadastro_doacao.js"></script>
+    <script src="../../assets/js/config.js"></script>
+    <script src="../../assets/js/cadastro_doação.js"></script>
     <script src="../../assets/js/auth/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
