--- a/codigo/public/modulos/donations/cartao.html
+++ b/codigo/public/modulos/donations/cartao.html
@@ -103,6 +103,7 @@
         </div>
     </main>
     <script src="https://unpkg.com/imask"></script>
+    <script src="../../assets/js/config.js"></script>
     <script src="../../assets/js/donations/cartao.js"></script>
     <script src="../../assets/js/auth/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
