--- a/codigo/public/modulos/login/login.html
+++ b/codigo/public/modulos/login/login.html
@@ -82,6 +82,7 @@
         </div>
     </footer>
 
+  <script src="../../assets/js/config.js"></script>
   <script src="../../assets/js/auth/login.js"></script>
 </body>
 
