--- a/codigo/public/modulos/ong/cadastro_ongs.html
+++ b/codigo/public/modulos/ong/cadastro_ongs.html
@@ -195,6 +195,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"></script>
+    <script src="../../assets/js/config.js"></script>
     <script src="../../assets/js/ong/cadastro_ongs.js"></script>
     <script src="../../assets/js/auth/login.js"></script>
 </body>
