--- a/codigo/public/about.html
+++ b/codigo/public/about.html
@@ -294,6 +294,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <script src="assets/js/config.js"></script>
     <script src="assets/js/auth/login.js"></script>
 </body>
 </html>
